@@ -53,6 +53,8 @@ print << "CODE";
 
 /* NB: this file is autogenerated from snap_accessors.txt by accessor.pl */
 
+#include <config.h>
+
 #include "internals.h"
 
 struct libspectrum_snap {
