@@ -53,6 +53,8 @@ print << "CODE";
 
 /* NB: this file is autogenerated from $ARGV[0] by $0 */
 
+#include <config.h>
+
 #include "internals.h"
 #include "tape_block.h"
 
